// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableDataProvider getColumns returns columns for a single instance 1`] = `
Array [
  Object {
    "editable": false,
    "filterable": true,
    "key": "/DisplayLabel/",
    "label": "£ábêl",
    "sortable": true,
  },
  Object {
    "editable": false,
    "filterable": true,
    "key": "PhysicalModel_ModeledElement",
    "label": "Modeled Element",
    "sortable": true,
  },
]
`;

exports[`TableDataProvider getColumns returns columns for multiple instances 1`] = `
Array [
  Object {
    "editable": false,
    "filterable": true,
    "key": "/DisplayLabel/",
    "label": "£ábêl",
    "sortable": true,
  },
  Object {
    "editable": false,
    "filterable": true,
    "key": "PhysicalModel_RepositoryModel_ModeledElement",
    "label": "Modeled Element",
    "sortable": true,
  },
]
`;

exports[`TableDataProvider getRow returns first row 1`] = `
Object {
  "cells": Array [
    Object {
      "key": "/DisplayLabel/",
      "record": PropertyRecord {
        "description": "Properties_60InstancesWithUrl2",
        "isMerged": false,
        "isReadonly": true,
        "property": Object {
          "displayLabel": "£ábêl",
          "name": "/DisplayLabel/",
          "typename": "string",
        },
        "value": Object {
          "displayValue": "Properties_60InstancesWithUrl2",
          "value": "Properties_60InstancesWithUrl2",
          "valueFormat": 0,
        },
      },
    },
    Object {
      "key": "PhysicalModel_ModeledElement",
      "record": PropertyRecord {
        "description": "Properties_60InstancesWithUrl2",
        "isMerged": false,
        "isReadonly": true,
        "property": Object {
          "displayLabel": "Modeled Element",
          "name": "PhysicalModel_ModeledElement",
          "typename": "navigation",
        },
        "value": Object {
          "displayValue": "Properties_60InstancesWithUrl2",
          "value": 28,
          "valueFormat": 0,
        },
      },
    },
  ],
  "key": "{\\"className\\":\\"BisCore:PhysicalModel\\",\\"id\\":\\"0x1c\\"}",
}
`;

exports[`TableDataProvider sorting sorts instances ascending 1`] = `
Array [
  Object {
    "cells": Array [
      Object {
        "key": "/DisplayLabel/",
        "record": PropertyRecord {
          "description": "BisCore.DictionaryModel",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "£ábêl",
            "name": "/DisplayLabel/",
            "typename": "string",
          },
          "value": Object {
            "displayValue": "BisCore.DictionaryModel",
            "value": "BisCore.DictionaryModel",
            "valueFormat": 0,
          },
        },
      },
      Object {
        "key": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
        "record": PropertyRecord {
          "description": "BisCore.DictionaryModel",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "Modeled Element",
            "name": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
            "typename": "navigation",
          },
          "value": Object {
            "displayValue": "BisCore.DictionaryModel",
            "value": 16,
            "valueFormat": 0,
          },
        },
      },
    ],
    "key": "{\\"className\\":\\"BisCore:DictionaryModel\\",\\"id\\":\\"0x10\\"}",
  },
  Object {
    "cells": Array [
      Object {
        "key": "/DisplayLabel/",
        "record": PropertyRecord {
          "description": "DgnV8Bridge",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "£ábêl",
            "name": "/DisplayLabel/",
            "typename": "string",
          },
          "value": Object {
            "displayValue": "DgnV8Bridge",
            "value": "DgnV8Bridge",
            "valueFormat": 0,
          },
        },
      },
      Object {
        "key": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
        "record": PropertyRecord {
          "description": "Ñót spêçìfíêd",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "Modeled Element",
            "name": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
            "typename": "navigation",
          },
          "value": Object {
            "displayValue": "Ñót spêçìfíêd",
            "value": null,
            "valueFormat": 0,
          },
        },
      },
    ],
    "key": "{\\"className\\":\\"BisCore:RepositoryModel\\",\\"id\\":\\"0x1\\"}",
  },
  Object {
    "cells": Array [
      Object {
        "key": "/DisplayLabel/",
        "record": PropertyRecord {
          "description": "Properties_60InstancesWithUrl2",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "£ábêl",
            "name": "/DisplayLabel/",
            "typename": "string",
          },
          "value": Object {
            "displayValue": "Properties_60InstancesWithUrl2",
            "value": "Properties_60InstancesWithUrl2",
            "valueFormat": 0,
          },
        },
      },
      Object {
        "key": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
        "record": PropertyRecord {
          "description": "Properties_60InstancesWithUrl2",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "Modeled Element",
            "name": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
            "typename": "navigation",
          },
          "value": Object {
            "displayValue": "Properties_60InstancesWithUrl2",
            "value": 28,
            "valueFormat": 0,
          },
        },
      },
    ],
    "key": "{\\"className\\":\\"BisCore:PhysicalModel\\",\\"id\\":\\"0x1c\\"}",
  },
]
`;

exports[`TableDataProvider sorting sorts instances descending 1`] = `
Array [
  Object {
    "cells": Array [
      Object {
        "key": "/DisplayLabel/",
        "record": PropertyRecord {
          "description": "Properties_60InstancesWithUrl2",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "£ábêl",
            "name": "/DisplayLabel/",
            "typename": "string",
          },
          "value": Object {
            "displayValue": "Properties_60InstancesWithUrl2",
            "value": "Properties_60InstancesWithUrl2",
            "valueFormat": 0,
          },
        },
      },
      Object {
        "key": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
        "record": PropertyRecord {
          "description": "Properties_60InstancesWithUrl2",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "Modeled Element",
            "name": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
            "typename": "navigation",
          },
          "value": Object {
            "displayValue": "Properties_60InstancesWithUrl2",
            "value": 28,
            "valueFormat": 0,
          },
        },
      },
    ],
    "key": "{\\"className\\":\\"BisCore:PhysicalModel\\",\\"id\\":\\"0x1c\\"}",
  },
  Object {
    "cells": Array [
      Object {
        "key": "/DisplayLabel/",
        "record": PropertyRecord {
          "description": "DgnV8Bridge",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "£ábêl",
            "name": "/DisplayLabel/",
            "typename": "string",
          },
          "value": Object {
            "displayValue": "DgnV8Bridge",
            "value": "DgnV8Bridge",
            "valueFormat": 0,
          },
        },
      },
      Object {
        "key": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
        "record": PropertyRecord {
          "description": "Ñót spêçìfíêd",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "Modeled Element",
            "name": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
            "typename": "navigation",
          },
          "value": Object {
            "displayValue": "Ñót spêçìfíêd",
            "value": null,
            "valueFormat": 0,
          },
        },
      },
    ],
    "key": "{\\"className\\":\\"BisCore:RepositoryModel\\",\\"id\\":\\"0x1\\"}",
  },
  Object {
    "cells": Array [
      Object {
        "key": "/DisplayLabel/",
        "record": PropertyRecord {
          "description": "BisCore.DictionaryModel",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "£ábêl",
            "name": "/DisplayLabel/",
            "typename": "string",
          },
          "value": Object {
            "displayValue": "BisCore.DictionaryModel",
            "value": "BisCore.DictionaryModel",
            "valueFormat": 0,
          },
        },
      },
      Object {
        "key": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
        "record": PropertyRecord {
          "description": "BisCore.DictionaryModel",
          "isMerged": false,
          "isReadonly": true,
          "property": Object {
            "displayLabel": "Modeled Element",
            "name": "DictionaryModel_PhysicalModel_RepositoryModel_ModeledElement",
            "typename": "navigation",
          },
          "value": Object {
            "displayValue": "BisCore.DictionaryModel",
            "value": 16,
            "valueFormat": 0,
          },
        },
      },
    ],
    "key": "{\\"className\\":\\"BisCore:DictionaryModel\\",\\"id\\":\\"0x10\\"}",
  },
]
`;
